# voiceblender-python

./: .gitignore  Makefile  README.md  pyproject.toml
examples/ivr/: .env.example  README.md  main.py
src/voiceblender/: __init__.py  _client.py  _errors.py  _events.py  _http.py  _hub.py  _legs.py  _models.py  _playback.py  _requests.py  _responses.py  _responses_extra.py  _rooms.py  _stream.py  _sync_helpers.py  _vsi.py  _webrtc.py
src/voiceblender/sync/: __init__.py  _facade.py
tests/: _vsi_mock.py  conftest.py  test_errors.py  test_generator_determinism.py  test_http_flow.py  test_hub.py  test_import.py  test_ivr_example.py  test_naming.py  test_parity.py  test_playback.py  test_roundtrip.py  test_sync_facade.py  test_vsi_stream.py
tools/: generate.py
